--- a/source/posts/2015/10-13-podcast-03-38.md.erb
+++ b/source/posts/2015/10-13-podcast-03-38.md.erb
@@ -23,8 +23,8 @@ main_image: "/images/static/03/0338.png"
 ## JavaScript
 
  - [React v0.14](http://facebook.github.io/react/blog/2015/10/07/react-v0.14.html), [Announcing Meteor Galaxy](http://info.meteor.com/blog/announcing-meteor-galaxy) и [Getting Started with Relay](https://auth0.com/blog/2015/10/06/getting-started-with-relay/)
- - [Compile to JavaScript: The 10 Best JavaScript Alternative Languages](http://noeticforce.com/alternative-programming-languages-that-compile-to-javascript), [Artyom.js - a voice control - voice commands - speech recognition javascript library](https://github.com/sdkcarlos/artyom.js/), [Mercer - 3D Interactive Data Visualizations](http://gmarland.github.io/mercer/) и [Cake-chart - interactive multi-layer pie chart](https://github.com/alexkuz/cake-chart)
- - [Highlight Text Inside a Textarea](http://codersblock.com/blog/highlight-text-inside-a-textarea/), [Panic.js - error handling done right](http://xpl.github.io/useless/) и [HTTP 203: The Future of JavaScript (video)](https://www.youtube.com/watch?v=pLLLf1QPgoU)
+ - [Compile to JavaScript: The 10 Best JavaScript Alternative Languages](http://noeticforce.com/alternative-programming-languages-that-compile-to-javascript), [Artyom.js - a voice control - voice commands - speech recognition javascript library](https://github.com/sdkcarlos/artyom.js/) и [Panic.js - error handling done right](http://xpl.github.io/useless/)
+ - [Mercer - 3D Interactive Data Visualizations](http://gmarland.github.io/mercer/), [Cake-chart - interactive multi-layer pie chart](https://github.com/alexkuz/cake-chart), [Highlight Text Inside a Textarea](http://codersblock.com/blog/highlight-text-inside-a-textarea/) и [HTTP 203: The Future of JavaScript (video)](https://www.youtube.com/watch?v=pLLLf1QPgoU)
 
 ## Обсуждаем
 
