--- a/source/posts/2015/10-12-podcast-03-38.md.erb
+++ b/source/posts/2015/10-12-podcast-03-38.md.erb
@@ -1,13 +1,13 @@
 ---
 title: "38 выпуск 03 сезона. React v0.14, Meteor Galaxy, Database Sharding, Quines in Ruby, Dashed, Mercer и прочее"
-date: 2015-10-13
+date: 2015-10-12
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/125/file/podfm_rwpod_my_37_125.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.37/0337.mp3"
+audio_url: "http://rwpod.podfm.ru/my/126/file/podfm_rwpod_my_38_126.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.38/0338.mp3"
 audio_format: "audio/mpeg"
-audio_length: 45470900
-duration: "00:45:35"
+audio_length: 34301678
+duration: "00:35:37"
 small_icon: mic
 main_image: "/images/static/03/0338.png"
 ---
@@ -25,6 +25,10 @@ main_image: "/images/static/03/0338.png"
  - [React v0.14](http://facebook.github.io/react/blog/2015/10/07/react-v0.14.html), [Announcing Meteor Galaxy](http://info.meteor.com/blog/announcing-meteor-galaxy) и [Getting Started with Relay](https://auth0.com/blog/2015/10/06/getting-started-with-relay/)
  - [Compile to JavaScript: The 10 Best JavaScript Alternative Languages](http://noeticforce.com/alternative-programming-languages-that-compile-to-javascript), [Artyom.js - a voice control - voice commands - speech recognition javascript library](https://github.com/sdkcarlos/artyom.js/) и [Panic.js - error handling done right](http://xpl.github.io/useless/)
  - [Mercer - 3D Interactive Data Visualizations](http://gmarland.github.io/mercer/), [Cake-chart - interactive multi-layer pie chart](https://github.com/alexkuz/cake-chart), [Highlight Text Inside a Textarea](http://codersblock.com/blog/highlight-text-inside-a-textarea/) и [HTTP 203: The Future of JavaScript (video)](https://www.youtube.com/watch?v=pLLLf1QPgoU)
+
+## Мастер класс
+
+ - [Postgresql - настраиваем и масштабируем. Используйте "RWPOD_15" промокод для 15% скидки](http://smartme.university/workshop/postgresql-nastraivaem-i-masshtabiruem-na-bis/)
 
 READMORE
 
