--- a/source/posts/2015/10-27-podcast-03-39.md.erb
+++ b/source/posts/2015/10-27-podcast-03-39.md.erb
@@ -39,6 +39,7 @@ main_image: "/images/static/03/0339.png"
 
  - [Remote-First vs. Remote-Friendly](http://zachholman.com/posts/remote-first/)
  - [The Difference Between Remote and Distributed Teams in Startups](https://www.blossom.co/blog/remote-versus-distributed-teams)
+ - [Remote versus Co-located Work](http://martinfowler.com/articles/remote-or-co-located.html)
 
 READMORE
 
