--- a/source/posts/2015/10-27-podcast-03-39.md.erb
+++ b/source/posts/2015/10-27-podcast-03-39.md.erb
@@ -28,12 +28,15 @@ main_image: "/images/static/03/0339.png"
 ## JavaScript
 
  - [Node v4.2.0 (LTS)](https://nodejs.org/en/blog/release/v4.2.0/), [Node v4.2.1 (LTS)](https://nodejs.org/en/blog/release/v4.2.1/)
+ - [Introducing GSS: Grid Style Sheets](http://www.sitepoint.com/introducing-gss-grid-style-sheets/)
  - [7 Things You Should Know About WebAssembly](https://auth0.com/blog/2015/10/14/7-things-you-should-know-about-web-assembly/)
  - [Webpack your bags](http://blog.madewithlove.be/post/webpack-your-bags/)
  - [Node.js Security Checklist](https://blog.risingstack.com/node-js-security-checklist/)
  - [Cropperjs - JavaScript image cropper](http://fengyuanchen.github.io/cropperjs/)
  - [Drool - automated memory leak detection](https://github.com/samccone/drool)
  - [Smartcrop.js - content aware image cropping](https://github.com/jwagner/smartcrop.js)
+ - [Printliminator - a bookmarklet to makes websites print better](https://css-tricks.github.io/The-Printliminator/)
+ - [PostCSS Tutorials (video)](https://www.youtube.com/playlist?list=PLLnpHn493BHFvjZzyYrQP0RTsG-Al7j9m), [MoscowJS 15 (video)](https://www.youtube.com/playlist?list=PL95OM-7UObpGuBTS9k8ssHJlAoMxBah9j)
 
 ## Обсуждаем
 
