--- a/source/posts/2015/10-27-podcast-03-39.md.erb
+++ b/source/posts/2015/10-27-podcast-03-39.md.erb
@@ -16,12 +16,14 @@ main_image: "/images/static/03/0339.png"
 
 ## Ruby
 
+ - [Making a custom logger for Rails query optimization](https://evilmartians.com/chronicles/rails-query-optimizations)
  - [Functional Service Objects on Rails](http://firedev.com/posts/2015/functional-service-objects-on-rails/)
  - [Speed up with Materialized Views on PostgreSQL and Rails](http://www.sitepoint.com/speed-up-with-materialized-views-on-postgresql-and-rails/)
  - [Accelerated Rails Downloads with NGINX](https://mattbrictson.com/accelerated-rails-downloads)
  - [How to Solve It: Mathematical Approach to Programming](https://netguru.co/blog/programming-mathematics)
  - [Fixing SQL Injection Vulnerabilities in Ruby/Rails](http://gavinmiller.io/2015/fixing-sql-injection-vulnerabilities/)
  - [Optimizing Sidekiq](http://www.mikeperham.com/2015/10/14/optimizing-sidekiq/)
+ - [Scaling On The Cheap](https://medium.com/@ayasin/scaling-on-the-cheap-933e46944886#.ffxya39wa)
  - [Rust to the rescue (of Ruby)](https://medium.com/@fbzga/rust-to-the-rescue-of-ruby-2067f5e1dc25)
  - [MailChecker - cross-language temporary (disposable/throwaway) email detection library](https://github.com/FGRibreau/mailchecker)
 
@@ -32,6 +34,7 @@ main_image: "/images/static/03/0339.png"
  - [7 Things You Should Know About WebAssembly](https://auth0.com/blog/2015/10/14/7-things-you-should-know-about-web-assembly/)
  - [Webpack your bags](http://blog.madewithlove.be/post/webpack-your-bags/)
  - [Node.js Security Checklist](https://blog.risingstack.com/node-js-security-checklist/)
+ - [Bridge - Dart full stack modular web framework](http://dart-bridge.io/)
  - [Cropperjs - JavaScript image cropper](http://fengyuanchen.github.io/cropperjs/)
  - [Drool - automated memory leak detection](https://github.com/samccone/drool)
  - [Smartcrop.js - content aware image cropping](https://github.com/jwagner/smartcrop.js)
