--- a/source/posts/2015/10-27-podcast-03-39.md.erb
+++ b/source/posts/2015/10-27-podcast-03-39.md.erb
@@ -39,6 +39,7 @@ main_image: "/images/static/03/0339.png"
  - [Drool - automated memory leak detection](https://github.com/samccone/drool)
  - [Smartcrop.js - content aware image cropping](https://github.com/jwagner/smartcrop.js)
  - [Printliminator - a bookmarklet to makes websites print better](https://css-tricks.github.io/The-Printliminator/)
+ - [Front-end Developer Handbook](http://www.frontendhandbook.com/)
  - [PostCSS Tutorials (video)](https://www.youtube.com/playlist?list=PLLnpHn493BHFvjZzyYrQP0RTsG-Al7j9m), [MoscowJS 15 (video)](https://www.youtube.com/playlist?list=PL95OM-7UObpGuBTS9k8ssHJlAoMxBah9j)
 
 ## Обсуждаем
