--- a/source/posts/2015/10-27-podcast-03-39.md.erb
+++ b/source/posts/2015/10-27-podcast-03-39.md.erb
@@ -25,6 +25,7 @@ main_image: "/images/static/03/0339.png"
  - [Optimizing Sidekiq](http://www.mikeperham.com/2015/10/14/optimizing-sidekiq/)
  - [Scaling On The Cheap](https://medium.com/@ayasin/scaling-on-the-cheap-933e46944886#.ffxya39wa)
  - [Rust to the rescue (of Ruby)](https://medium.com/@fbzga/rust-to-the-rescue-of-ruby-2067f5e1dc25)
+ - [Why Auto Increment Is A Terrible Idea](https://www.clever-cloud.com/blog/engineering/2015/05/20/Why-Auto-Increment-Is-A-Terrible-Idea/) и [Default UUID's In Rails](http://blog.mccartie.com/2015/10/20/default-uuid's-in-rails.html)
  - [MailChecker - cross-language temporary (disposable/throwaway) email detection library](https://github.com/FGRibreau/mailchecker)
 
 ## JavaScript
