--- a/source/posts/2015/10-27-podcast-03-39.md.erb
+++ b/source/posts/2015/10-27-podcast-03-39.md.erb
@@ -25,7 +25,7 @@ main_image: "/images/static/03/0339.png"
 
  - [Node v4.2.1 (LTS)](https://nodejs.org/en/blog/release/v4.2.1/), [Node.js Security Checklist](https://blog.risingstack.com/node-js-security-checklist/) и [Bootstrap Studio](http://bootstrapstudio.io/)
  - [7 Things You Should Know About WebAssembly](https://auth0.com/blog/2015/10/14/7-things-you-should-know-about-web-assembly/), [Incremental DOM 101: What is it and why I should care?](https://auth0.com/blog/2015/10/23/incremental-dom/) и [Introducing GSS: Grid Style Sheets](http://www.sitepoint.com/introducing-gss-grid-style-sheets/)
- - [Bridge - Dart full stack modular web framework](http://dart-bridge.io/), [Cropperjs - JavaScript image cropper](http://fengyuanchen.github.io/cropperjs/)б [Smartcrop.js - content aware image cropping](https://github.com/jwagner/smartcrop.js), [Drool - automated memory leak detection](https://github.com/samccone/drool) и [Printliminator - a bookmarklet to makes websites print better](https://css-tricks.github.io/The-Printliminator/)
+ - [Bridge - Dart full stack modular web framework](http://dart-bridge.io/), [Cropperjs - JavaScript image cropper](http://fengyuanchen.github.io/cropperjs/), [Smartcrop.js - content aware image cropping](https://github.com/jwagner/smartcrop.js), [Drool - automated memory leak detection](https://github.com/samccone/drool) и [Printliminator - a bookmarklet to makes websites print better](https://css-tricks.github.io/The-Printliminator/)
  - [Front-end Developer Handbook](http://www.frontendhandbook.com/), [PostCSS Tutorials (video)](https://www.youtube.com/playlist?list=PLLnpHn493BHFvjZzyYrQP0RTsG-Al7j9m) и [MoscowJS 15 (video)](https://www.youtube.com/playlist?list=PL95OM-7UObpGuBTS9k8ssHJlAoMxBah9j)
 
 ## Обсуждаем
