--- a/source/posts/2015/11-03-podcast-03-40.md.erb
+++ b/source/posts/2015/11-03-podcast-03-40.md.erb
@@ -26,6 +26,7 @@ main_image: "/images/static/03/0340.png"
  - [Vue.js 1.0.0](http://vuejs.org/2015/10/26/1.0.0-release/)
  - [Babel.js 6.0.0](http://babeljs.io/blog/2015/10/29/6.0.0/)
  - [Graph-scroll.js - simple scrolling events for d3 graphics](http://1wheel.github.io/graph-scroll/)
+ - [Five Questions](http://rmurphey.com/blog/2015/10/08/five-questions/)
 
 READMORE
 
