--- a/source/posts/2015/11-03-podcast-03-40.md.erb
+++ b/source/posts/2015/11-03-podcast-03-40.md.erb
@@ -17,7 +17,7 @@ main_image: "/images/static/03/0340.png"
 ## Ruby
 
  - [Deploying Your Docker Rails App](http://blog.codeship.com/deploying-docker-rails-app/) и [Fixing File Access Vulnerabilities in Ruby/Rails](http://gavinmiller.io/2015/fixing-file-access-vulnerabilities-in-ruby-and-rails/)
- - [Rails 5 allows setting custom HTTP Headers for assets](http://blog.bigbinary.com/2015/10/31/rails-5-allows-setting-custom-http-headers-for-assets.html), [The Log-Normal Reality](http://blog.skylight.io/the-log-normal-reality/) и [Why you should avoid SSL for your next application](https://www.cossacklabs.com/avoid-ssl-for-your-next-app.html)
+ - [Rails 5 allows setting custom HTTP Headers for assets](http://blog.bigbinary.com/2015/10/31/rails-5-allows-setting-custom-http-headers-for-assets.html) и [Why you should avoid SSL for your next application](https://www.cossacklabs.com/avoid-ssl-for-your-next-app.html)
  - [Polo - travels through your database and creates sample snapshots](https://github.com/IFTTT/polo) и [Dasherize - material-based dashboard for your projects](https://www.dasherize.com/)
 
 
