--- a/source/posts/2015/11-03-podcast-03-40.md.erb
+++ b/source/posts/2015/11-03-podcast-03-40.md.erb
@@ -3,11 +3,11 @@ title: "40 выпуск 03 сезона. Deploying Your Docker Rails App, Node v
 date: 2015-11-03
 tags:
  - podcasts
-audio_url: "http://rwpod.podfm.ru/my/127/file/podfm_rwpod_my_39_127.mp3"
-audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.39/0339.mp3"
+audio_url: "http://rwpod.podfm.ru/my/128/file/podfm_rwpod_my_40_128.mp3"
+audio_mirror: "https://github.com/rwpod/mirror/releases/download/03.40/0340.mp3"
 audio_format: "audio/mpeg"
-audio_length: 85202943
-duration: "00:28:39"
+audio_length: 50464240
+duration: "00:52:28"
 small_icon: mic
 main_image: "/images/static/03/0340.png"
 ---
@@ -25,7 +25,11 @@ main_image: "/images/static/03/0340.png"
 
  - [Node v5.0.0](https://nodejs.org/en/blog/release/v5.0.0/), [Babel.js 6.0.0](http://babeljs.io/blog/2015/10/29/6.0.0/) и [Vue.js 1.0.0](http://vuejs.org/2015/10/26/1.0.0-release/)
  - [When JavaScript (books) had no closures](http://itturnsout.com/when-javascript-books-had-no-closures/) и [Five Questions](http://rmurphey.com/blog/2015/10/08/five-questions/)
- - [Incremental DOM](http://google.github.io/incremental-dom/#about) и [Graph-scroll.js - simple scrolling events for d3 graphics](http://1wheel.github.io/graph-scroll/)
+ - [Incremental DOM](http://google.github.io/incremental-dom/#about), [Virtual DOM Benchmark](http://vdom-benchmark.github.io/vdom-benchmark/) и [Graph-scroll.js - simple scrolling events for d3 graphics](http://1wheel.github.io/graph-scroll/)
+
+## Обсуждаем
+
+ - [Startups Timelines - History of innovations](http://www.startlin.es/)
 
 READMORE
 
