--- a/source/posts/2015/11-10-podcast-03-41.md.erb
+++ b/source/posts/2015/11-10-podcast-03-41.md.erb
@@ -21,13 +21,16 @@ main_image: "/images/static/03/0341.png"
  - [How to Write a Cucumber Test for Google Maps](http://mixandgo.com/blog/how-to-write-a-cucumber-test-for-google-maps)
  - [Announcing Administrate](https://robots.thoughtbot.com/announcing-administrate)
  - [Sidekiq 4.0](https://github.com/mperham/sidekiq/blob/master/4.0-Upgrade.md)
+ - [How constant lookup and resolution works in Ruby on Rails](http://blog.bigbinary.com/2015/11/05/how-constant-lookup-happens-in-rails.html)
  - [Introduce "Safe navigation operator"](https://bugs.ruby-lang.org/issues/11537)
  - [Продуманная оптимизация (книга)](http://optimization.guide/)
 
 ## JavaScript
 
+ - [JavaScript Is Eating The World](http://arc.applause.com/2015/11/06/javascript-is-eating-the-world/)
  - [Object.observe proposal withdrawn](https://mail.mozilla.org/pipermail/es-discuss/2015-November/044684.html)
  - [Maria - The MVC Framework for JavaScript Application](http://peter.michaux.ca/maria/)
+ - [NW.js - an app runtime based on Chromium and node.js](http://nwjs.io/)
 
 READMORE
 
