--- a/source/posts/2015/11-10-podcast-03-41.md.erb
+++ b/source/posts/2015/11-10-podcast-03-41.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "41 выпуск 03 сезона.  и прочее"
+title: "41 выпуск 03 сезона. Rubinius Analyst, Administrate, Skynet for Beginners, Object.observe, Maria, NW.js и прочее"
 date: 2015-11-10
 tags:
  - podcasts
@@ -16,21 +16,19 @@ main_image: "/images/static/03/0341.png"
 
 ## Ruby
 
- - [Rubinius Analyst - Know Your App](http://rubini.us/2015/11/04/rubinius-analyst-know-your-app/)
- - [How Ruby Interprets and Runs Your Programs](http://blog.honeybadger.io/how-ruby-interprets-and-runs-your-programs/)
- - [How to Write a Cucumber Test for Google Maps](http://mixandgo.com/blog/how-to-write-a-cucumber-test-for-google-maps)
- - [Announcing Administrate](https://robots.thoughtbot.com/announcing-administrate)
- - [Sidekiq 4.0](https://github.com/mperham/sidekiq/blob/master/4.0-Upgrade.md)
- - [How constant lookup and resolution works in Ruby on Rails](http://blog.bigbinary.com/2015/11/05/how-constant-lookup-happens-in-rails.html)
- - [Introduce "Safe navigation operator"](https://bugs.ruby-lang.org/issues/11537)
- - [Продуманная оптимизация (книга)](http://optimization.guide/)
+ - [Rubinius Analyst - Know Your App](http://rubini.us/2015/11/04/rubinius-analyst-know-your-app/), [How Ruby Interprets and Runs Your Programs](http://blog.honeybadger.io/how-ruby-interprets-and-runs-your-programs/) и [How constant lookup and resolution works in Ruby on Rails](http://blog.bigbinary.com/2015/11/05/how-constant-lookup-happens-in-rails.html)
+ - [Introduce "Safe navigation operator"](https://bugs.ruby-lang.org/issues/11537), [Announcing Administrate](https://robots.thoughtbot.com/announcing-administrate) и [Sidekiq 4.0](https://github.com/mperham/sidekiq/blob/master/4.0-Upgrade.md)
+ - [Продуманная оптимизация (книга)](http://optimization.guide/) и [Skynet for Beginners, by Rin Raeuber (video)](https://www.youtube.com/watch?v=KlDMZyEwRzk)
 
 ## JavaScript
 
- - [JavaScript Is Eating The World](http://arc.applause.com/2015/11/06/javascript-is-eating-the-world/)
- - [Object.observe proposal withdrawn](https://mail.mozilla.org/pipermail/es-discuss/2015-November/044684.html)
- - [Maria - The MVC Framework for JavaScript Application](http://peter.michaux.ca/maria/)
- - [NW.js - an app runtime based on Chromium and node.js](http://nwjs.io/)
+ - [JavaScript Is Eating The World](http://arc.applause.com/2015/11/06/javascript-is-eating-the-world/) и [Object.observe proposal withdrawn](https://mail.mozilla.org/pipermail/es-discuss/2015-November/044684.html)
+ - [Will Angular 2 be a success? You bet!](http://developer.telerik.com/featured/will-angular-2-be-a-success-you-bet/), [7 Reasons to Use Ember.js](http://blog.codeschool.io/2015/10/26/7-reasons-to-use-ember-js/) и [Why Static Website Generators Are The Next Big Thing](http://www.smashingmagazine.com/2015/11/modern-static-website-generators-next-big-thing/)
+ - [Maria - The MVC Framework for JavaScript Application](http://peter.michaux.ca/maria/), [Scooter - SCSS framework built to provide base styles, CSS components, and rapid static prototyping for Dropbox](http://dropbox.github.io/scooter/) и [NW.js - an app runtime based on Chromium and node.js](http://nwjs.io/)
+
+## Обсуждаю
+
+ - [RWpodPlayer on React Native](https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1053885042&mt=8)
 
 READMORE
 
