--- a/source/posts/2015/11-10-podcast-03-41.md.erb
+++ b/source/posts/2015/11-10-podcast-03-41.md.erb
@@ -28,7 +28,7 @@ main_image: "/images/static/03/0341.png"
 
 ## Обсуждаю
 
- - [RWpodPlayer on React Native](https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1053885042&mt=8)
+ - [RWpodPlayer on React Native](https://itunes.apple.com/WebObjects/MZStore.woa/wa/viewSoftware?id=1053885042&mt=8) ([исходники](https://github.com/rwpod/RWpodPlayer))
 
 READMORE
 
