--- a/source/posts/2015/10-12-podcast-03-38.md.erb
+++ b/source/posts/2015/10-12-podcast-03-38.md.erb
@@ -16,7 +16,7 @@ main_image: "/images/static/03/0338.png"
 
 ## Ruby
 
- - [Database Sharding](http://development.threatsim.com/development/2015/09/30/database-sharding/), [Let's Build a Sinatra](https://robots.thoughtbot.com/lets-build-a-sinatra) и [Generating quines in Ruby](http://blog.chaps.io/2015/10/01/generating-quines-in-ruby.html)
+ - [Database Sharding](http://development.wombatsecurity.com/development/2015/09/30/database-sharding/), [Let's Build a Sinatra](https://robots.thoughtbot.com/lets-build-a-sinatra) и [Generating quines in Ruby](http://blog.chaps.io/2015/10/01/generating-quines-in-ruby.html)
  - [Effectively Debugging Capybara Feature Specs](https://tech.greenhouse.io/2015/10/07/effectively-debugging-capybara-feature-specs.html), [Enhancing Logs With Cache Timing](http://sorentwo.com/2015/10/07/enhancing-logs-with-cache-timing.html) и [A Small Case Study in Threading](http://rubini.us/2015/09/29/a-small-case-study-in-threading/)
  - [Writing Ruby extensions in Go - an in depth review](http://dev.mikamai.com/post/130986121064/writing-ruby-extensions-in-go-an-in-depth-review), [Dashed - a Ruby library for interacting with Amazon Dash button presses](https://github.com/kenyonj/dashed) и [Transactify - run your methods in database transaction](https://github.com/igorkasyanchuk/transactify)
 
