--- a/source/posts/2015/11-17-podcast-03-42.md.erb
+++ b/source/posts/2015/11-17-podcast-03-42.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "42 выпуск 03 сезона.  и прочее"
+title: "42 выпуск 03 сезона. Ruby 2.3.0-preview1, Lazy Hash in Ruby, TensorFlow, The Cost of Frameworks, jsCodeStructure и прочее"
 date: 2015-11-17
 tags:
  - podcasts
@@ -16,14 +16,17 @@ main_image: "/images/static/03/0342.png"
 
 ## Ruby
 
- - [Notable features in Ruby 2.3.0-preview1 explained](http://yukas.by/ruby/2015/11/12/notable-features-in-ruby-2-3-0-preview1-explained/) и [Hash Comparison in Ruby 2.3](http://olivierlacan.com/posts/hash-comparison-in-ruby-2-3/)
- - [Rubinius Compute](http://rubini.us/2015/11/10/rubinius-compute-programming-for-the-internet/)
- - [D has no vision. Go is out of its depth. Rust skipped leg day](https://www.quora.com/Which-language-has-the-brightest-future-in-replacement-of-C-between-D-Go-and-Rust-And-Why/answer/Andrei-Alexandrescu)
+ - [Ruby 2.3.0-preview1 Released](https://www.ruby-lang.org/en/news/2015/11/11/ruby-2-3-0-preview1-released/), [Notable features in Ruby 2.3.0-preview1 explained](http://yukas.by/ruby/2015/11/12/notable-features-in-ruby-2-3-0-preview1-explained/) и [Hash Comparison in Ruby 2.3](http://olivierlacan.com/posts/hash-comparison-in-ruby-2-3/)
+ - [Slicing and Dicing Ruby Enumerables](http://blog.honeybadger.io/ruby-enumerable-slicing-before-when-and-after/), [Implement a Lazy Hash in Ruby](http://6ftdan.com/allyourdev/2015/11/13/implement-a-lazy-hash-in-ruby/) и [How We Migrated to Active Record 4](https://engineering.heroku.com/blogs/2015-11-04-upgrading-to-active-record-4/)
+ - [Introducing Godmin 1.0](https://www.varvet.se/blog/update/2015/11/13/introducing-godmin-1-0.html) и [D has no vision. Go is out of its depth. Rust skipped leg day](https://www.quora.com/Which-language-has-the-brightest-future-in-replacement-of-C-between-D-Go-and-Rust-And-Why/answer/Andrei-Alexandrescu)
  - [TensorFlow - an open source software library for numerical computation using data flow graphs](http://www.tensorflow.org/), [Distributed Machine Learning Toolkit](http://www.dmtk.io/) и [Leaf - Open Machine Intelligence Framework](http://autumnai.github.io/leaf/leaf/index.html)
 
 ## JavaScript
 
-
+ - [The Cost of Frameworks](https://aerotwist.com/blog/the-cost-of-frameworks/), [10 Habits of a Happy Node Hacker](http://blog.heroku.com/archives/2015/11/10/node-habits-2016) и [Bower Development Effectively Stopped](https://twitter.com/nachocoloma/status/663622545162280960)
+ - [Face Proximity Detection with JavaScript](http://www.sitepoint.com/face-proximity-detection-with-javascript/) и [Supercharging JavaScript performance with asm.js](http://blogs.windows.com/msedgedev/2015/11/10/supercharging-javascript-performance-with-asm-js/) ([demo](https://dev.windows.com/en-us/microsoft-edge/testdrive/demos/chess/))
+ - [Anatomy of a large Angular application](https://medium.com/@bojzi/anatomy-of-a-large-angular-application-f098e5e36994) и [Patterns for scaling CSS](http://red-badger.com/blog/2015/11/09/patterns-for-scaling-css/)
+ - [Babel plugin handbook](https://github.com/thejameskyle/babel-plugin-handbook), [jsCodeStructure - analyse the structure of your js project](https://github.com/timqian/jsCodeStructure) и [Notie.js - a clean and simple notification plugin (alert/growl style) for javascript](https://jaredreich.com/projects/notie.js/)
 
 ## Обсуждаем
 
