--- a/source/posts/2015/11-23-podcast-03-43.md.erb
+++ b/source/posts/2015/11-23-podcast-03-43.md.erb
@@ -20,10 +20,11 @@ main_image: "/images/static/03/0343.png"
  - [How to write better code using mutation testing](https://blog.blockscore.com/how-to-write-better-code-using-mutation-testing/)
  - [Lexical scoping and Ruby class variables](http://blog.honeybadger.io/lexical-scoping-and-ruby-class-variables/)
  - [Five Active Record Features You Should Be Using](http://jakeyesbeck.com/2015/11/15/five-active-record-features-you-should-be-using/)
+ - [Phoenix is not Rails](https://dockyard.com/blog/2015/11/18/phoenix-is-not-rails)
 
 ## JavaScript
 
-
+ - [ServiceWorker Cookbook](https://serviceworke.rs/)
 
 READMORE
 
