--- a/source/posts/2015/11-23-podcast-03-43.md.erb
+++ b/source/posts/2015/11-23-podcast-03-43.md.erb
@@ -16,15 +16,24 @@ main_image: "/images/static/03/0343.png"
 
 ## Ruby
 
+ - [Ruby 3x3: Ruby 3 will be 3 times faster](http://engineering.appfolio.com/appfolio-engineering/2015/11/18/ruby-3x3)
  - [Snappier Development Mode in Rails 5](http://weblog.rubyonrails.org/2015/11/11/snappier-development-mode-in-rails-5/)
  - [How to write better code using mutation testing](https://blog.blockscore.com/how-to-write-better-code-using-mutation-testing/)
  - [Lexical scoping and Ruby class variables](http://blog.honeybadger.io/lexical-scoping-and-ruby-class-variables/)
  - [Five Active Record Features You Should Be Using](http://jakeyesbeck.com/2015/11/15/five-active-record-features-you-should-be-using/)
  - [Phoenix is not Rails](https://dockyard.com/blog/2015/11/18/phoenix-is-not-rails)
+ - [Quantum Computing with Ruby](http://meier-online.com/en/2015/11/quantencomputing-ruby/)
+ - [Debugging Randomness](https://thedarkside.frantzmiccoli.com/tricks/2015/11/11/debugging-randomness.html)
+ - [Spying on running Ruby processes](http://blog.honeybadger.io/spying-on-running-ruby-processes/)
+ - [Gemify your assets in less than 10 minutes](http://dreamingechoes.github.io/gem/ruby/rails/gemify-your-assets-in-less-than-10-minutes/)
 
 ## JavaScript
 
+ - [Foundation 6](http://foundation.zurb.com/sites)
  - [ServiceWorker Cookbook](https://serviceworke.rs/)
+ - [TIFU by using Math.random()](https://medium.com/@betable/tifu-by-using-math-random-f1c308c4fd9d#.a5y5syv1h)
+ - [GraphQL is the King. Long Live the King! (R.I.P. REST)](https://medium.com/@scbarrus/graphql-is-the-king-long-live-the-king-r-i-p-rest-cf04ce38f6c#.u9v495bd7)
+
 
 READMORE
 
