--- a/source/posts/2015/11-23-podcast-03-43.md.erb
+++ b/source/posts/2015/11-23-podcast-03-43.md.erb
@@ -26,6 +26,7 @@ main_image: "/images/static/03/0343.png"
  - [Debugging Randomness](https://thedarkside.frantzmiccoli.com/tricks/2015/11/11/debugging-randomness.html)
  - [Spying on running Ruby processes](http://blog.honeybadger.io/spying-on-running-ruby-processes/)
  - [Gemify your assets in less than 10 minutes](http://dreamingechoes.github.io/gem/ruby/rails/gemify-your-assets-in-less-than-10-minutes/)
+ - [Ruby Tricks, Idiomatic Ruby, Refactorings and Best Practices](http://best-ruby.com/)
 
 ## JavaScript
 
@@ -33,6 +34,9 @@ main_image: "/images/static/03/0343.png"
  - [ServiceWorker Cookbook](https://serviceworke.rs/)
  - [TIFU by using Math.random()](https://medium.com/@betable/tifu-by-using-math-random-f1c308c4fd9d#.a5y5syv1h)
  - [GraphQL is the King. Long Live the King! (R.I.P. REST)](https://medium.com/@scbarrus/graphql-is-the-king-long-live-the-king-r-i-p-rest-cf04ce38f6c#.u9v495bd7)
+ - [Simulacra.js - one-way data binding for web applications](https://0x8890.github.io/simulacra/)
+ - [Mo.js – motion graphics for the web](http://mojs.io/)
+ - [Pamatcher - a pattern matching library for JavaScript iterators](http://pamatcher.js.org/)
 
 
 READMORE
