--- a/source/posts/2015/11-23-podcast-03-43.md.erb
+++ b/source/posts/2015/11-23-podcast-03-43.md.erb
@@ -33,6 +33,7 @@ main_image: "/images/static/03/0343.png"
  - [Foundation 6](http://foundation.zurb.com/sites)
  - [ServiceWorker Cookbook](https://serviceworke.rs/)
  - [TIFU by using Math.random()](https://medium.com/@betable/tifu-by-using-math-random-f1c308c4fd9d#.a5y5syv1h)
+ - [Flux VS Single State Tree](http://www.christianalfoni.com/articles/2015_11_16_Flux-vs-Single-State-Tree)
  - [GraphQL is the King. Long Live the King! (R.I.P. REST)](https://medium.com/@scbarrus/graphql-is-the-king-long-live-the-king-r-i-p-rest-cf04ce38f6c#.u9v495bd7)
  - [Simulacra.js - one-way data binding for web applications](https://0x8890.github.io/simulacra/)
  - [Mo.js – motion graphics for the web](http://mojs.io/)
