--- a/source/posts/2015/11-30-podcast-03-44.md.erb
+++ b/source/posts/2015/11-30-podcast-03-44.md.erb
@@ -21,7 +21,7 @@ main_image: "/images/static/03/0344.png"
 
 ## JavaScript
 
-
+ - [The Story Behind the New WordPress.com](https://developer.wordpress.com/2015/11/23/the-story-behind-the-new-wordpress-com/)
 
 
 READMORE
