--- a/source/posts/2015/11-30-podcast-03-44.md.erb
+++ b/source/posts/2015/11-30-podcast-03-44.md.erb
@@ -17,12 +17,14 @@ main_image: "/images/static/03/0344.png"
 ## Ruby
 
  - [First Beta of ROM 1.0.0 Has Been Released](http://rom-rb.org/blog/2015/11/24/first-beta-of-rom-1-0-0-has-been-released/)
+ - [Happier Rails Development with Polo](https://medium.com/engineering-at-ifttt/happier-rails-development-with-polo-9df6819136d3#.f33sn8sf6)
  - [Infinite Sequences in Ruby](https://rossta.net/blog/infinite-sequences-in-ruby.html)
 
 ## JavaScript
 
- - [The Story Behind the New WordPress.com](https://developer.wordpress.com/2015/11/23/the-story-behind-the-new-wordpress-com/)
-
+ - [The Story Behind the New WordPress.com](https://developer.wordpress.com/2015/11/23/the-story-behind-the-new-wordpress-com/) и [Dance to Calypso](http://ma.tt/2015/11/dance-to-calypso/)
+ - [Refactoring a JavaScript Application to Use Microservices: What we Learned With Backbone and Marionette](https://www.safaribooksonline.com/blog/2015/11/24/refactoring-javascript-microservice-backbone-marionette/)
+ - [10 things to know about Gulp](http://engineroom.teamwork.com/10-things-to-know-about-gulp/)
 
 READMORE
 
