--- a/source/posts/2015/11-30-podcast-03-44.md.erb
+++ b/source/posts/2015/11-30-podcast-03-44.md.erb
@@ -25,6 +25,7 @@ main_image: "/images/static/03/0344.png"
  - [The Story Behind the New WordPress.com](https://developer.wordpress.com/2015/11/23/the-story-behind-the-new-wordpress-com/) и [Dance to Calypso](http://ma.tt/2015/11/dance-to-calypso/)
  - [Refactoring a JavaScript Application to Use Microservices: What we Learned With Backbone and Marionette](https://www.safaribooksonline.com/blog/2015/11/24/refactoring-javascript-microservice-backbone-marionette/)
  - [10 things to know about Gulp](http://engineroom.teamwork.com/10-things-to-know-about-gulp/)
+ - [How do Promises Work?](http://robotlolita.me/2015/11/15/how-do-promises-work.html)
 
 READMORE
 
