--- a/source/posts/2015/11-30-podcast-03-44.md.erb
+++ b/source/posts/2015/11-30-podcast-03-44.md.erb
@@ -19,6 +19,7 @@ main_image: "/images/static/03/0344.png"
  - [First Beta of ROM 1.0.0 Has Been Released](http://rom-rb.org/blog/2015/11/24/first-beta-of-rom-1-0-0-has-been-released/)
  - [Happier Rails Development with Polo](https://medium.com/engineering-at-ifttt/happier-rails-development-with-polo-9df6819136d3#.f33sn8sf6)
  - [Infinite Sequences in Ruby](https://rossta.net/blog/infinite-sequences-in-ruby.html)
+ - [Is it nil?](https://www.leighhalliday.com/is-it-nil)
 
 ## JavaScript
 
