--- a/source/posts/2015/11-30-podcast-03-44.md.erb
+++ b/source/posts/2015/11-30-podcast-03-44.md.erb
@@ -20,6 +20,7 @@ main_image: "/images/static/03/0344.png"
  - [Happier Rails Development with Polo](https://medium.com/engineering-at-ifttt/happier-rails-development-with-polo-9df6819136d3#.f33sn8sf6)
  - [Infinite Sequences in Ruby](https://rossta.net/blog/infinite-sequences-in-ruby.html)
  - [Is it nil?](https://www.leighhalliday.com/is-it-nil)
+ - [NeuralTalk and Walk](https://vimeo.com/146492001)
 
 ## JavaScript
 
