--- a/source/posts/2015/11-30-podcast-03-44.md.erb
+++ b/source/posts/2015/11-30-podcast-03-44.md.erb
@@ -20,7 +20,11 @@ main_image: "/images/static/03/0344.png"
  - [Happier Rails Development with Polo](https://medium.com/engineering-at-ifttt/happier-rails-development-with-polo-9df6819136d3#.f33sn8sf6)
  - [Infinite Sequences in Ruby](https://rossta.net/blog/infinite-sequences-in-ruby.html)
  - [Is it nil?](https://www.leighhalliday.com/is-it-nil)
+ - [Choosing my editor for Ruby on Rails](http://davidmles.com/blog/editor-ruby-rails/)
+ - [Sidekiq Best Practices](https://medium.com/handy-tech/sidekiq-best-practices-cbc2d070a7d4)
  - [NeuralTalk and Walk](https://vimeo.com/146492001)
+ - [Startup Playbook (free book)](http://playbook.samaltman.com/)
+ - [Keynote and Q&A: Matz (RubyConf 2015, video)](https://www.youtube.com/watch?v=LE0g2TUsJ4U)
 
 ## JavaScript
 
@@ -29,6 +33,7 @@ main_image: "/images/static/03/0344.png"
  - [10 things to know about Gulp](http://engineroom.teamwork.com/10-things-to-know-about-gulp/)
  - [How do Promises Work?](http://robotlolita.me/2015/11/15/how-do-promises-work.html)
  - [How PostCSS became 1.5x faster by changing 2 lines of code](https://evilmartians.com/chronicles/postcss-1_5x-faster)
+ - [The Silver Bullet Syndrome by Hadi Hariri (video)](https://www.youtube.com/watch?v=3wyd6J3yjcs)
 
 READMORE
 
