--- a/source/posts/2015/11-30-podcast-03-44.md.erb
+++ b/source/posts/2015/11-30-podcast-03-44.md.erb
@@ -32,6 +32,7 @@ main_image: "/images/static/03/0344.png"
  - [Refactoring a JavaScript Application to Use Microservices: What we Learned With Backbone and Marionette](https://www.safaribooksonline.com/blog/2015/11/24/refactoring-javascript-microservice-backbone-marionette/)
  - [10 things to know about Gulp](http://engineroom.teamwork.com/10-things-to-know-about-gulp/)
  - [How do Promises Work?](http://robotlolita.me/2015/11/15/how-do-promises-work.html)
+ - [Responsify.js - a jquery plugin that makes images truly responsive](http://responsifyjs.space/)
  - [How PostCSS became 1.5x faster by changing 2 lines of code](https://evilmartians.com/chronicles/postcss-1_5x-faster)
  - [The Silver Bullet Syndrome by Hadi Hariri (video)](https://www.youtube.com/watch?v=3wyd6J3yjcs)
 
