--- a/source/posts/2015/11-30-podcast-03-44.md.erb
+++ b/source/posts/2015/11-30-podcast-03-44.md.erb
@@ -24,6 +24,7 @@ main_image: "/images/static/03/0344.png"
  - [Sidekiq Best Practices](https://medium.com/handy-tech/sidekiq-best-practices-cbc2d070a7d4)
  - [NeuralTalk and Walk](https://vimeo.com/146492001)
  - [Startup Playbook (free book)](http://playbook.samaltman.com/)
+ - [A curated list of lists of interview questions](https://github.com/MaximAbramchuck/awesome-interviews)
  - [Keynote and Q&A: Matz (RubyConf 2015, video)](https://www.youtube.com/watch?v=LE0g2TUsJ4U)
 
 ## JavaScript
