--- a/source/posts/2015/11-30-podcast-03-44.md.erb
+++ b/source/posts/2015/11-30-podcast-03-44.md.erb
@@ -1,5 +1,5 @@
 ---
-title: "44 выпуск 03 сезона.  и прочее"
+title: "44 выпуск 03 сезона. ROM 1.0.0 Beta, Is it nil?, Startup Playbook, Calypso, Documentcss, Responsify.js и прочее"
 date: 2015-11-30
 tags:
  - podcasts
@@ -16,27 +16,15 @@ main_image: "/images/static/03/0344.png"
 
 ## Ruby
 
- - [First Beta of ROM 1.0.0 Has Been Released](http://rom-rb.org/blog/2015/11/24/first-beta-of-rom-1-0-0-has-been-released/)
- - [Happier Rails Development with Polo](https://medium.com/engineering-at-ifttt/happier-rails-development-with-polo-9df6819136d3#.f33sn8sf6)
- - [Infinite Sequences in Ruby](https://rossta.net/blog/infinite-sequences-in-ruby.html)
- - [Is it nil?](https://www.leighhalliday.com/is-it-nil)
- - [Choosing my editor for Ruby on Rails](http://davidmles.com/blog/editor-ruby-rails/)
- - [Sidekiq Best Practices](https://medium.com/handy-tech/sidekiq-best-practices-cbc2d070a7d4)
- - [NeuralTalk and Walk](https://vimeo.com/146492001)
- - [Startup Playbook (free book)](http://playbook.samaltman.com/)
- - [A curated list of lists of interview questions](https://github.com/MaximAbramchuck/awesome-interviews)
- - [Keynote and Q&A: Matz (RubyConf 2015, video)](https://www.youtube.com/watch?v=LE0g2TUsJ4U)
+ - [First Beta of ROM 1.0.0 Has Been Released](http://rom-rb.org/blog/2015/11/24/first-beta-of-rom-1-0-0-has-been-released/), [Infinite Sequences in Ruby](https://rossta.net/blog/infinite-sequences-in-ruby.html) и [Is it nil?](https://www.leighhalliday.com/is-it-nil)
+ - [Choosing my editor for Ruby on Rails](http://davidmles.com/blog/editor-ruby-rails/), [Sidekiq Best Practices](https://medium.com/handy-tech/sidekiq-best-practices-cbc2d070a7d4) и [A curated list of lists of interview questions](https://github.com/MaximAbramchuck/awesome-interviews)
+ - [Startup Playbook (free book)](http://playbook.samaltman.com/), [Keynote and Q&A: Matz (RubyConf 2015, video)](https://www.youtube.com/watch?v=LE0g2TUsJ4U) и [NeuralTalk and Walk](https://vimeo.com/146492001)
 
 ## JavaScript
 
- - [The Story Behind the New WordPress.com](https://developer.wordpress.com/2015/11/23/the-story-behind-the-new-wordpress-com/) и [Dance to Calypso](http://ma.tt/2015/11/dance-to-calypso/)
- - [Refactoring a JavaScript Application to Use Microservices: What we Learned With Backbone and Marionette](https://www.safaribooksonline.com/blog/2015/11/24/refactoring-javascript-microservice-backbone-marionette/)
- - [10 things to know about Gulp](http://engineroom.teamwork.com/10-things-to-know-about-gulp/)
- - [How do Promises Work?](http://robotlolita.me/2015/11/15/how-do-promises-work.html)
- - [Responsify.js - a jquery plugin that makes images truly responsive](http://responsifyjs.space/)
- - [Documentcss - create live style guides with interactive examples, that change as your design does](http://documentcss.com/)
- - [How PostCSS became 1.5x faster by changing 2 lines of code](https://evilmartians.com/chronicles/postcss-1_5x-faster)
- - [The Silver Bullet Syndrome by Hadi Hariri (video)](https://www.youtube.com/watch?v=3wyd6J3yjcs)
+ - [Refactoring a JavaScript Application to Use Microservices: What we Learned With Backbone and Marionette](https://www.safaribooksonline.com/blog/2015/11/24/refactoring-javascript-microservice-backbone-marionette/), [The Story Behind the New WordPress.com](https://developer.wordpress.com/2015/11/23/the-story-behind-the-new-wordpress-com/) и [Dance to Calypso](http://ma.tt/2015/11/dance-to-calypso/)
+ - [How do Promises Work?](http://robotlolita.me/2015/11/15/how-do-promises-work.html), [10 things to know about Gulp](http://engineroom.teamwork.com/10-things-to-know-about-gulp/) и [How PostCSS became 1.5x faster by changing 2 lines of code](https://evilmartians.com/chronicles/postcss-1_5x-faster)
+ - [Documentcss - create live style guides with interactive examples, that change as your design does](http://documentcss.com/), [Responsify.js - a jquery plugin that makes images truly responsive](http://responsifyjs.space/) и [The Silver Bullet Syndrome by Hadi Hariri (video)](https://www.youtube.com/watch?v=3wyd6J3yjcs)
 
 READMORE
 
