--- a/source/posts/2015/12-06-podcast-03-45.md.erb
+++ b/source/posts/2015/12-06-podcast-03-45.md.erb
@@ -17,12 +17,21 @@ main_image: "/images/static/03/0345.png"
 ## Ruby
 
  - [Architecting Rails Apps as Microservices](http://blog.codeship.com/architecting-rails-apps-as-microservices/)
+ - [Ask DTrace: Why are my tests so slow?](https://blog.8thlight.com/colin-jones/2015/12/01/ask-dtrace-why-are-my-tests-so-slow.html)
  - [An Interview with Jose Valim](http://www.sitepoint.com/an-interview-with-jose-valim/)
+ - [SemVer for Library Maintainers](http://www.schneems.com/2015/11/29/what-is-semver.html)
+ - [Swift is now open source](https://swift.org/) и [Getting Started with Swift on Linux](https://www.twilio.com/blog/2015/12/getting-started-with-swift-on-linux.html)
+ - [Let's Encrypt entering Public Beta](https://letsencrypt.org/2015/12/03/entering-public-beta.html)
+ - [Install Let's Encrypt and create a free ssl certificate](https://janikvonrotz.ch/2015/12/04/install-lets-encrypt-and-create-a-free-ssl-certificate/)
 
 ## JavaScript
 
  - [Introducing Pokedex.org: a progressive webapp for Pokémon fans](http://www.pocketjavascript.com/blog/2015/11/23/introducing-pokedex-org)
  - [SVG without SMIL: Google Chrome Kills Support](http://www.noupe.com/design/smil-chrome-kills-support-93960.html)
+ - [Labella.js - labels should be beautiful](http://twitter.github.io/labella.js/)
+ - [Waves library repository](http://wavesjs.github.io/)
+ - [Split.js - a lightweight, unopinionated utility for creating adjustable split views or panes](http://nathancahill.github.io/Split.js/)
+ - [Debugging Node.js in Production (video)](https://www.youtube.com/watch?v=O1YP8QP9gLA)
 
 READMORE
 
