--- a/source/posts/2015/12-06-podcast-03-45.md.erb
+++ b/source/posts/2015/12-06-podcast-03-45.md.erb
@@ -30,6 +30,8 @@ main_image: "/images/static/03/0345.png"
  - [SVG without SMIL: Google Chrome Kills Support](http://www.noupe.com/design/smil-chrome-kills-support-93960.html)
  - [Labella.js - labels should be beautiful](http://twitter.github.io/labella.js/)
  - [Waves library repository](http://wavesjs.github.io/)
+ - [Getting Started with Redux](https://egghead.io/series/getting-started-with-redux)
+ - [Understanding Redux Middleware](https://medium.com/@meagle/understanding-87566abcfb7a)
  - [Split.js - a lightweight, unopinionated utility for creating adjustable split views or panes](http://nathancahill.github.io/Split.js/)
  - [Debugging Node.js in Production (video)](https://www.youtube.com/watch?v=O1YP8QP9gLA)
 
