--- a/source/posts/2015/12-06-podcast-03-45.md.erb
+++ b/source/posts/2015/12-06-podcast-03-45.md.erb
@@ -32,6 +32,7 @@ main_image: "/images/static/03/0345.png"
  - [Waves library repository](http://wavesjs.github.io/)
  - [Getting Started with Redux](https://egghead.io/series/getting-started-with-redux)
  - [Understanding Redux Middleware](https://medium.com/@meagle/understanding-87566abcfb7a)
+ - [Flexbox froggy](http://flexboxfroggy.com/)
  - [Split.js - a lightweight, unopinionated utility for creating adjustable split views or panes](http://nathancahill.github.io/Split.js/)
  - [Debugging Node.js in Production (video)](https://www.youtube.com/watch?v=O1YP8QP9gLA)
 
