--- a/source/posts/2015/12-06-podcast-03-45.md.erb
+++ b/source/posts/2015/12-06-podcast-03-45.md.erb
@@ -23,6 +23,7 @@ main_image: "/images/static/03/0345.png"
  - [Swift is now open source](https://swift.org/) и [Getting Started with Swift on Linux](https://www.twilio.com/blog/2015/12/getting-started-with-swift-on-linux.html)
  - [Let's Encrypt entering Public Beta](https://letsencrypt.org/2015/12/03/entering-public-beta.html)
  - [Install Let's Encrypt and create a free ssl certificate](https://janikvonrotz.ch/2015/12/04/install-lets-encrypt-and-create-a-free-ssl-certificate/)
+ - ["I Hate JavaScript"](http://www.redotheweb.com/2015/12/04/i-hate-havascript.html)
 
 ## JavaScript
 
