--- a/source/posts/2015/12-15-podcast-03-46.md.erb
+++ b/source/posts/2015/12-15-podcast-03-46.md.erb
@@ -23,7 +23,7 @@ main_image: "/images/static/03/0346.png"
 
 ## JavaScript
 
-
+ - [ES7 Proposal: The Pipeline Operator](https://github.com/mindeavor/es-pipeline-operator)
 
 READMORE
 
