--- a/source/posts/2015/12-15-podcast-03-46.md.erb
+++ b/source/posts/2015/12-15-podcast-03-46.md.erb
@@ -23,6 +23,7 @@ main_image: "/images/static/03/0346.png"
 
 ## JavaScript
 
+ - [December Security Release Summary (node.js)](https://nodejs.org/en/blog/vulnerability/december-2015-security-releases/)
  - [ES7 Proposal: The Pipeline Operator](https://github.com/mindeavor/es-pipeline-operator)
 
 READMORE
