--- a/source/posts/2015/12-15-podcast-03-46.md.erb
+++ b/source/posts/2015/12-15-podcast-03-46.md.erb
@@ -24,7 +24,7 @@ main_image: "/images/static/03/0346.png"
 
  - [December Security Release Summary (node.js)](https://nodejs.org/en/blog/vulnerability/december-2015-security-releases/), [ES7 Proposal: The Pipeline Operator](https://github.com/mindeavor/es-pipeline-operator) и [Explaining few strange behavior of setTimeout() with code snippet](http://voidcanvas.com/strange-settimeout/)
  - [Websocket task queue](http://wsq.rocks/), [The "Blur Up" Technique for Loading Background Images](https://css-tricks.com/the-blur-up-technique-for-loading-background-images/) и [Twitter's Heart Animation in Full CSS](https://medium.com/@OxyDesign/twitter-s-heart-animation-in-full-css-b1c00ca5b774)
- - [Documentation.js - documentation generation system](http://documentation.js.org/), [Viewer - a simple jQuery image viewing plugin](http://fengyuanchen.github.io/viewer/), [Go Live With WebRTC](http://code.tutsplus.com/courses/go-live-with-webrtc) и [KharkivJS #5 2015 (videos)](https://www.youtube.com/playlist?list=PLnkLrCUX4Qh5I-IJ30tf51EQYmWTPWPx2)
+ - [Documentation.js - documentation generation system](http://documentation.js.org/), [Viewer - a simple jQuery image viewing plugin](http://fengyuanchen.github.io/viewer/) и [KharkivJS #5 2015 (videos)](https://www.youtube.com/playlist?list=PLnkLrCUX4Qh5I-IJ30tf51EQYmWTPWPx2)
 
 READMORE
 
