--- a/source/posts/2015/12-22-podcast-03-47.md.erb
+++ b/source/posts/2015/12-22-podcast-03-47.md.erb
@@ -16,10 +16,14 @@ main_image: "/images/static/03/0347.png"
 
 ## Ruby
 
+ - [Ruby 2.2.4 Released](https://www.ruby-lang.org/en/news/2015/12/16/ruby-2-2-4-released/)
+ - [Rails 5.0.0.beta1: Action Cable, API mode, Rails command](http://weblog.rubyonrails.org/2015/12/18/Rails-5-0-beta1/)
  - [Handling Paginated Resources in Ruby](https://rossta.net/blog/paginated-resources-in-ruby.html)
  - [Rails, Secure Cookies, HSTS and friends](http://eftimov.net/rails-tls-hsts-cookies/)
  - [How to Test Multithreaded Code](http://www.mikeperham.com/2015/12/14/how-to-test-multithreaded-code/)
  - [Getting started with Distributed Ruby (DRb)](http://nithinbekal.com/posts/distributed-ruby/)
+ - [Avoiding "Call Super" with Callbacks](http://weblog.jamisbuck.org/2015/12/19/avoiding-call-super-with-callbacks.html)
+ - [HOWTO access the Google Analytics API with Ruby](http://readysteadycode.com/howto-access-the-google-analytics-api-with-ruby)
  - [Trailblazer](http://trailblazer.to/)
  - [Ruby Time & Date Classes](http://www.blackbytes.info/2015/12/ruby-time/)
  - [Cass_schema - a gem for managing multiple cassandra schemas across multiple clusters](https://github.com/datto/cass_schema)
@@ -27,7 +31,10 @@ main_image: "/images/static/03/0347.png"
 ## JavaScript
 
  - [Angular 2 Beta](http://angularjs.blogspot.com/2015/12/angular-2-beta.html)
+ - [There's Math.random(), and then there's Math.random()](http://v8project.blogspot.com/2015/12/theres-mathrandom-and-then-theres.html)
  - [Signed Service Workers](https://github.com/qgustavor/signed-service-workers)
+ - [Timbre.js - JavaScript Library for Objective Sound Programming](http://mohayonao.github.io/timbre.js/)
+ - [Linear - ruler app made with Electron](http://mikaa123.github.io/linear-website/)
 
 READMORE
 
