--- a/source/posts/2015/12-20-podcast-03-47.md.erb
+++ b/source/posts/2015/12-20-podcast-03-47.md.erb
@@ -23,7 +23,7 @@ main_image: "/images/static/03/0347.png"
 
 ## JavaScript
 
- - [Angular 2 Beta](http://angularjs.blogspot.com/2015/12/angular-2-beta.html), [There's Math.random(), and then there's Math.random()](http://v8project.blogspot.com/2015/12/theres-mathrandom-and-then-theres.html)
+ - [Angular 2 Beta](http://angularjs.blogspot.com/2015/12/angular-2-beta.html) и [There's Math.random(), and then there's Math.random()](http://v8project.blogspot.com/2015/12/theres-mathrandom-and-then-theres.html)
  - [Parsing RSS Feeds in JavaScript – Options](http://www.raymondcamden.com/2015/12/08/parsing-rss-feeds-in-javascript-options), [Signed Service Workers](https://github.com/qgustavor/signed-service-workers) и [Benjamin De Cock - Lets move! (video)](https://www.youtube.com/watch?v=J6wUmQDQBkw)
  - [D3.compose - compose complex, data-driven visualizations from reusable charts and components with d3](http://csnw.github.io/d3.compose/), [Linear - ruler app made with Electron](http://mikaa123.github.io/linear-website/) и [Angular-trix - a rich wysiwyg text editor directive for angularjs](http://sachinchoolur.github.io/angular-trix/)
 
